--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,5 +2,5 @@
   <p>Welcome! Please <a href="/login">log in</a>.</p>
   <% } else { %>
     <p>Hello,
-      <%= user.username %>. View your <a href="/profile">profile</a>.</p>
+      <%= user.displayName %>. View your <a href="/profile">profile</a>.</p>
     <% } %>
