--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,12 +1,11 @@
 <p>
   ID:
-  <%= user.id %><br/> Username:
-    <%= user.username %><br/> Name:
-      <%= user.displayName %><br/>
-        <% if (user.emails) { %>
-          Email:
-          <%= user.emails[0].value %><br/>
-            <% } %>
+  <%= user.id %><br/> Name:
+    <%= user.displayName %><br/>
+      <% if (user.emails) { %>
+        Email:
+        <%= user.emails[0].value %><br/>
+          <% } %>
 </p>
 
 <form action="/upload/image" method="post">
