--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,8 +8,8 @@
           <% } %>
 </p>
 
-<form action="/upload/image" method="post">
-  <input type="file" id="coverArt" name="coverArt">
+<form ref="coverArt" id="coverArt" action="/upload/image" method="post" enctype="multipart/form-data">
+  <input type="file" name="coverArt">
   <button type="submit">Upload Song Cover!</button>
 </form>
 
