Successfully created single endpoint to upload

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -51,6 +51,6 @@
   <label for="coverArt">Cover Art</label>
   <input type="file" id="coverArt" name="coverArt">
   <label for="song">Song as MP3</label>
-  <input type="file" id="song" name="song">
+  <input type="file" id="audio" name="audio">
   <button type="submit" name="button">Add New Song!</button>
 </form>
