--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,3 +4,5 @@
     <p>Hello,
       <%= user.displayName %>. View your <a href="/profile">profile</a>.</p>
     <% } %>
+
+<a href="/discover">Discover Music Here</a>
