--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,6 +30,7 @@
         Email:
         <%= user.emails[0].value %><br/>
           <% } %>
+  <a href="/discover">Discover Music Here</a>
 </p>
 
 <h2>Upload a new song!</h2>
