--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,1 +1,18 @@
-<a href="/login/facebook">Log In with Facebook</a>
+<style media="screen">
+  a {
+    background-color: black;
+    border-radius: 20px;
+    color: white;
+    font-size: 1.5em;
+    padding: 20px 60px;
+    text-decoration: none;
+  }
+
+  div {
+    margin-top: 25px;
+  }
+</style>
+
+<div>
+  <a href="/login/facebook">Log In with Facebook</a>
+</div>
