--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,5 +1,30 @@
-<h2>Your song was successfully uploaded!</h2>
+<style media="screen">
+  button {
+    background-color: black;
+    border-radius: 20px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.5em;
+    padding: 20px 60px;
+    text-decoration: none;
+  }
 
-<form action="/profile">
-  <button type="submit">Return to profile</button>
-</form>
+  .block {
+    background-color: #FFFFFF;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px gray;
+    margin: 0 auto;
+    max-width: 600px;
+    padding: 40px;
+    padding-bottom: 100px;
+    text-align: center;
+  }
+</style>
+<div class="block">
+  <h2>Your song was successfully uploaded!</h2>
+
+  <form action="/profile">
+    <button type="submit">Return to profile</button>
+  </form>
+</div>
