--- a/views/fanProfile.ejs
+++ b/views/fanProfile.ejs
@@ -124,15 +124,23 @@
   <a href="/discover">Discover New Music</a>
 </p>
 
+<h2>Welcome to your dashboard!</h2>
+
+<% if (songs.length < 1) { %>
+  <p style="text-align:center;font-size:2.0em;margin-top:20%">Once you start liking songs, those songs will show up here in your dashboard for quick access.</p>
+<% } %>
+
 <div class="clear"></div>
 
 <% for(let i = 0; i < songs.length; i++) { %>
-  <ul>
-   <li><h2><%= songs[i].title %></h2></li>
-   <li><img src="http://res.cloudinary.com/mperial-web-solutions/image/upload/v1512008206/<%= songs[i].imageID %>.jpg"></li>
-   <li><audio controls><source src="http://res.cloudinary.com/mperial-web-solutions/video/upload/v1512602527/<%= songs[i].audioID %>.mp3" type="audio/mpeg"></audio></li>
-   <li class="likes"><%= songs[i].numberOfLikes %> Likes</li>
-  </ul>
+  <form>
+    <ul>
+     <li><h2><%= songs[i].title %></h2></li>
+     <li><img src="http://res.cloudinary.com/mperial-web-solutions/image/upload/v1512008206/<%= songs[i].imageID %>.jpg"></li>
+     <li><audio controls><source src="http://res.cloudinary.com/mperial-web-solutions/video/upload/v1512602527/<%= songs[i].audioID %>.mp3" type="audio/mpeg"></audio></li>
+     <li class="likes"><%= songs[i].numberOfLikes %> Likes</li>
+    </ul>
+  </form>
 <% } %>
 
 <div class="clear"></div>
