--- a/views/profile-select.ejs
+++ b/views/profile-select.ejs
@@ -1,9 +1,54 @@
-<form action="/profile" method="get">
-  <input type="hidden" id="fan" name="userType" value="fan">
-  <button type="submit">I'm a fan</button>
-</form>
+<style media="screen">
+  body {
+    background-color: #EEEEEE;
+  }
 
-<form action="/profile" method="get">
-  <input type="hidden" id="artist" name="userType" value="artist">
-  <button type="submit">I'm an artist</button>
-</form>
+  .outerBox {
+    background-color: #FFFFFF;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px;
+    margin: 0 auto;
+    padding: 20px;
+    max-width: 600px;
+  }
+
+  .innerBox {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  form {
+    margin: 20px auto;
+  }
+
+  button {
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: black;
+    color: white;
+    font-size: 1.5em;
+    padding: 10px 40px;
+  }
+
+  button:hover {
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+    cursor: pointer;
+  }
+</style>
+
+<div class="outerBox">
+  <div class="innerBox">
+    <form action="/profile" method="get">
+      <input type="hidden" id="fan" name="userType" value="fan">
+      <button type="submit">I'm a fan</button>
+    </form>
+
+    <form action="/profile" method="get">
+      <input type="hidden" id="artist" name="userType" value="artist">
+      <button type="submit">I'm an artist</button>
+    </form>
+  </div>
+</div>
